---
source: src/mailer/email_sender.rs
expression: stub.messages()
---
[
    (
        Envelope {
            forward_path: [
                Address {
                    serialized: "user1@framework.com",
                    at_start: 5,
                },
            ],
            reverse_path: Some(
                Address {
                    serialized: "test@framework.com",
                    at_start: 4,
                },
            ),
        },
        "From: test@framework.com\r\nTo: user1@framework.com\r\nSubject: Email =?utf-8?b?U3ViamVjdAo=?=\r\nMIME-Version: 1.0\r\nDate: DATE\r\nContent-Type: multipart/alternative;\r\n boundary=\"IDENTIFIER\"\r\n\r\n--IDENTIFIER\r\nContent-Type: text/plain; charset=utf-8\r\nContent-Transfer-Encoding: 7bit\r\n\r\nWelcome\r\n--IDENTIFIER\r\nContent-Type: text/html; charset=utf-8\r\nContent-Transfer-Encoding: 7bit\r\n\r\n\r\n;<html>\r\n    <body>\r\n        Test Message\r\n    </body>\r\n</html>\r\n--IDENTIFIER--\r\n",
    ),
]
